# cc-chain

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  Cargo.workspace.toml.new  LIB_RS_ANALYSIS.md  LICENSE  README.md  SUBPROJECT_DEVELOPMENT_SUMMARY.md  UNDEVELOPED_MODULES.md  clippy.toml  rustfmt.toml
api/: Cargo.toml
api/authentication/: Cargo.toml
api/caching/: Cargo.toml
api/documentation/: Cargo.toml
api/endpoints/: Cargo.toml  lib.rs
api/errors/: Cargo.toml
api/handlers/: Cargo.toml
api/middleware/: Cargo.toml
api/monitoring/: Cargo.toml  lib.rs
api/rate_limiting/: Cargo.toml
api/responses/: Cargo.toml
api/routing/: Cargo.toml
api/serialization/: Cargo.toml
api/src/: error.rs  lib.rs  models.rs  server.rs
api/validation/: Cargo.toml
api/versioning/: Cargo.toml
bridge/: Cargo.toml
bridge/chains/: Cargo.toml  lib.rs
bridge/integration/: Cargo.toml
bridge/messages/: Cargo.toml
bridge/monitoring/: Cargo.toml
bridge/performance/: Cargo.toml
bridge/recovery/: Cargo.toml  lib.rs
bridge/security/: Cargo.toml  lib.rs
bridge/src/: bridge.rs  chains.rs  lib.rs  messages.rs  monitoring.rs  recovery.rs  validation.rs
bridge/utilities/: Cargo.toml
bridge/validation/: Cargo.toml  lib.rs
bridge/validators/: Cargo.toml
cc-contracts/: Cargo.toml
cc-contracts/src/: mod.rs
cc-networking/: Cargo.toml
cc-networking/src/: bridge.rs  lib.rs  network.rs
cli/: Cargo.toml
cli/commands/: Cargo.toml
cli/configuration/: Cargo.toml
cli/documentation/: Cargo.toml
cli/errors/: Cargo.toml
cli/interface/: Cargo.toml  lib.rs
cli/logging/: Cargo.toml
cli/monitoring/: Cargo.toml  lib.rs
cli/parsing/: Cargo.toml
cli/performance/: Cargo.toml
cli/src/: lib.rs  node.rs
cli/testing/: Cargo.toml
cli/utilities/: Cargo.toml
cli/validation/: Cargo.toml
consensus/: Cargo.toml
consensus/algorithm/: Cargo.toml
consensus/benches/: consensus_bench.rs
consensus/leaders/: Cargo.toml  lib.rs
consensus/messages/: Cargo.toml
consensus/metrics/: Cargo.toml
consensus/monitoring/: Cargo.toml
consensus/networking/: Cargo.toml
consensus/performance/: Cargo.toml  README.md
consensus/proposals/: Cargo.toml
consensus/recovery/: Cargo.toml  lib.rs
consensus/rounds/: Cargo.toml
consensus/safety/: Cargo.toml
consensus/src/: ccbft.rs  consensus_types.rs  lib.rs  safety.rs
consensus/timeouts/: Cargo.toml
consensus/validation/: Cargo.toml
consensus/views/: Cargo.toml  lib.rs
consensus/voting/: Cargo.toml
contracts/: Cargo.toml
contracts/src/: lib.rs
core/: Cargo.toml
core/algorithms/: Cargo.toml  README.md
core/benches/: core_bench.rs  performance_comparison.rs
core/blockchain/: Cargo.toml
core/consensus_helpers/: Cargo.toml  lib.rs
core/cryptography/: Cargo.toml
core/data_structures/: Cargo.toml
core/error_handling/: Cargo.toml  lib.rs
core/metrics/: Cargo.toml  lib.rs
core/networking/: Cargo.toml
core/performance/: Cargo.toml
core/security/: Cargo.toml
core/serialization/: Cargo.toml
core/src/: crypto.rs  lib.rs  state.rs  transaction.rs  utils.rs
core/state_management/: Cargo.toml
core/storage/: Cargo.toml
core/tests/: advanced_features_test.rs
core/transaction_processing/: Cargo.toml  lib.rs
core/utilities/: Cargo.toml
core/validation/: Cargo.toml
docs/: Cargo.toml  api.md  architecture.md  consensus.md  development.md
docs/api/: Cargo.toml
docs/architecture/: Cargo.toml  lib.rs
docs/configuration/: Cargo.toml
docs/development/: Cargo.toml
docs/generator/: Cargo.toml
docs/guides/: Cargo.toml
docs/markdown/: Cargo.toml
docs/references/: Cargo.toml  lib.rs
docs/specifications/: Cargo.toml
docs/src/: lib.rs
docs/tutorials/: Cargo.toml
docs/validation/: Cargo.toml
examples/: Cargo.toml  README.md  basic_transaction.rs  cc_chain_demo.rs  ccbft_example.rs  key_generation.rs
examples/advanced/: Cargo.toml  lib.rs
examples/api/: Cargo.toml
examples/basic/: Cargo.toml  lib.rs
examples/consensus/: Cargo.toml
examples/contracts/: Cargo.toml
examples/documentation/: Cargo.toml  lib.rs
examples/integration/: Cargo.toml
examples/networking/: Cargo.toml
examples/src/: lib.rs
examples/transactions/: Cargo.toml
examples/tutorials/: Cargo.toml  README.md
explorer/: Cargo.toml
explorer/backend/: Cargo.toml
explorer/database/: Cargo.toml
explorer/frontend/: Cargo.toml
explorer/indexing/: Cargo.toml  lib.rs
explorer/monitoring/: Cargo.toml
explorer/performance/: Cargo.toml
explorer/search/: Cargo.toml
explorer/src/: lib.rs
explorer/statistics/: Cargo.toml
explorer/visualization/: Cargo.toml
gateway/: Cargo.toml
gateway/authentication/: Cargo.toml
gateway/authorization/: Cargo.toml
gateway/caching/: Cargo.toml  lib.rs
gateway/documentation/: Cargo.toml
gateway/load_balancing/: Cargo.toml
gateway/logging/: Cargo.toml
gateway/metrics/: Cargo.toml
gateway/monitoring/: Cargo.toml
gateway/routing/: Cargo.toml
gateway/security/: Cargo.toml
gateway/src/: lib.rs
indexer/: Cargo.toml
indexer/aggregation/: Cargo.toml
indexer/caching/: Cargo.toml
indexer/database/: Cargo.toml  lib.rs
indexer/filtering/: Cargo.toml  lib.rs
indexer/monitoring/: Cargo.toml
indexer/performance/: Cargo.toml
indexer/queries/: Cargo.toml  lib.rs
indexer/search/: Cargo.toml
indexer/src/: lib.rs
indexer/statistics/: Cargo.toml  lib.rs
metrics/: Cargo.toml
metrics/aggregation/: Cargo.toml
metrics/alerts/: Cargo.toml  lib.rs
metrics/analysis/: Cargo.toml  lib.rs
metrics/collection/: Cargo.toml
metrics/dashboard/: Cargo.toml
metrics/export/: Cargo.toml
metrics/performance/: Cargo.toml
metrics/reporting/: Cargo.toml
metrics/src/: lib.rs
metrics/storage/: Cargo.toml  lib.rs
metrics/visualization/: Cargo.toml
monitor/: Cargo.toml
monitor/alerts/: Cargo.toml
monitor/analysis/: lib.rs  (+1 more)
networking/: Cargo.toml
rpc/: Cargo.toml
sdk/: Cargo.toml
storage/: Cargo.toml
testing/: Cargo.toml  README.md
tools/: Cargo.toml
validator/: Cargo.toml
wallet/: Cargo.toml
(+393 files in other folders)
