[workspace]
resolver = "2"
members = [
    "core",
    "consensus", 
    # "contracts",  # Temporarily disabled due to compilation issues
    "networking",
    "storage",
    "cli",
    "sdk",
    "docs",
    "wallet",
    "rpc",
    "api",
    "bridge",
    "explorer",
    "monitor",
    "validator",
    "indexer",
    "gateway",
    "metrics",
    "testing",
    "tools",
    "examples"
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/ccx404/cc-chain"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.47", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"

# Cryptography
blake3 = "1.8"
ed25519-dalek = { version = "2.2", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
parking_lot = "0.12"
lru = "0.12"
dashmap = "5.5"
bytes = "1.10"
hex = "0.4"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
crossbeam = "0.8"
rayon = "1.11"



