[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain API server"

[dependencies]
# Sub-subprojects
api-endpoints = { path = "endpoints" }
api-authentication = { path = "authentication" }
api-middleware = { path = "middleware" }
api-routing = { path = "routing" }
api-handlers = { path = "handlers" }
api-serialization = { path = "serialization" }
api-validation = { path = "validation" }
api-responses = { path = "responses" }
api-errors = { path = "errors" }
api-documentation = { path = "documentation" }
api-versioning = { path = "versioning" }
api-rate_limiting = { path = "rate_limiting" }
api-caching = { path = "caching" }
api-monitoring = { path = "monitoring" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

# HTTP server dependencies
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Logging
tracing = { workspace = true }
