[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain node and CLI tools"
keywords = ["blockchain", "cli", "node", "tools"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "cc-node"
path = "src/bin/node.rs"

[dependencies]
# Sub-subprojects
cli-commands = { path = "commands" }
cli-configuration = { path = "configuration" }
cli-documentation = { path = "documentation" }
cli-errors = { path = "errors" }
cli-interface = { path = "interface" }
cli-logging = { path = "logging" }
cli-monitoring = { path = "monitoring" }
cli-parsing = { path = "parsing" }
cli-performance = { path = "performance" }
cli-testing = { path = "testing" }
cli-utilities = { path = "utilities" }
cli-validation = { path = "validation" }

# Local dependencies
cc-core = { path = "../core" }
consensus = { path = "../consensus" }
# contracts = { path = "../contracts" }  # Temporarily disabled
networking = { path = "../networking" }
storage = { path = "../storage" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
parking_lot = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }