[package]
name = "consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain consensus algorithms and safety systems"
keywords = ["blockchain", "consensus", "bft", "safety"]
categories = ["cryptography", "algorithms"]

[dependencies]
# Local dependencies
core = { path = "../core" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Utilities
parking_lot = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency
crossbeam = { workspace = true }