[package]
name = "consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain consensus algorithms and safety systems"
keywords = ["blockchain", "consensus", "bft", "safety"]
categories = ["cryptography", "algorithms"]

[dependencies]
# Sub-subprojects
consensus-algorithm = { path = "algorithm" }
consensus-safety = { path = "safety" }
consensus-messages = { path = "messages" }
consensus-voting = { path = "voting" }
consensus-leaders = { path = "leaders" }
consensus-networking = { path = "networking" }
consensus-monitoring = { path = "monitoring" }
consensus-recovery = { path = "recovery" }
consensus-validation = { path = "validation" }
consensus-performance = { path = "performance" }
consensus-metrics = { path = "metrics" }
consensus-timeouts = { path = "timeouts" }
consensus-rounds = { path = "rounds" }
consensus-views = { path = "views" }
consensus-proposals = { path = "proposals" }

# Local dependencies
cc-core = { path = "../core" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Utilities
parking_lot = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency
crossbeam = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "consensus_bench"
harness = false