[package]
name = "contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain smart contracts and virtual machine"
keywords = ["blockchain", "contracts", "vm", "wasm"]
categories = ["cryptography", "wasm"]

[dependencies]
# Local dependencies
cc-core = { path = "../core" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Utilities
uuid = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# WASM runtime
wasmtime = "27.0"
wasmi = "0.32"
wasmparser = "0.223"

# Crypto
blake3 = { workspace = true }

# Additional utilities
bytes = { workspace = true }