[package]
name = "cc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain core blockchain components"
keywords = ["blockchain", "cryptography", "core"]
categories = ["cryptography", "data-structures"]

[dependencies]
# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
bincode = { workspace = true }

# Cryptography
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }

# Utilities
uuid = { workspace = true }
parking_lot = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
num_cpus = "1.16"

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency 
rayon = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "core_bench"
harness = false