[package]
name = "cc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain core blockchain components"
keywords = ["blockchain", "cryptography", "core"]
categories = ["cryptography", "data-structures"]

[dependencies]
# Sub-subprojects
cc-core-blockchain = { path = "blockchain" }
cc-core-cryptography = { path = "cryptography" }
cc-core-state_management = { path = "state_management" }
cc-core-transaction_processing = { path = "transaction_processing" }
cc-core-utilities = { path = "utilities" }
cc-core-error_handling = { path = "error_handling" }
cc-core-networking = { path = "networking" }
cc-core-storage = { path = "storage" }
cc-core-validation = { path = "validation" }
cc-core-serialization = { path = "serialization" }
cc-core-metrics = { path = "metrics" }
cc-core-algorithms = { path = "algorithms" }
cc-core-data_structures = { path = "data_structures" }
cc-core-consensus_helpers = { path = "consensus_helpers" }
cc-core-security = { path = "security" }
cc-core-performance = { path = "performance" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
bincode = { workspace = true }

# Cryptography
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }

# Utilities
uuid = { workspace = true }
parking_lot = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
num_cpus = "1.16"

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency 
rayon = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "core_bench"
harness = false

[[bench]]
name = "performance_comparison"
harness = false