[package]
name = "cc-chain-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain usage examples and tutorials"

[dependencies]
# Sub-subprojects
examples-advanced = { path = "advanced" }
examples-api = { path = "api" }
examples-basic = { path = "basic" }
examples-consensus = { path = "consensus" }
examples-contracts = { path = "contracts" }
examples-documentation = { path = "documentation" }
examples-integration = { path = "integration" }
examples-networking = { path = "networking" }
examples-transactions = { path = "transactions" }
examples-tutorials = { path = "tutorials" }

# Workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
