[package]
name = "indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain blockchain data indexer"

[dependencies]
# Sub-subprojects
indexer-aggregation = { path = "aggregation" }
indexer-caching = { path = "caching" }
indexer-database = { path = "database" }
indexer-filtering = { path = "filtering" }
indexer-monitoring = { path = "monitoring" }
indexer-performance = { path = "performance" }
indexer-queries = { path = "queries" }
indexer-search = { path = "search" }
indexer-statistics = { path = "statistics" }

# Workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
