[package]
name = "networking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain networking layer and bridge functionality"
keywords = ["blockchain", "networking", "p2p", "bridge"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Local dependencies
core = { path = "../core" }
consensus = { path = "../consensus" }
# contracts = { path = "../contracts" }  # Temporarily disabled

# Utilities
uuid = { workspace = true }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Utilities
parking_lot = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }