[package]
name = "sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain SDK for developers"

[dependencies]
# Sub-subprojects
sdk-accounts = { path = "accounts" }
sdk-bindings = { path = "bindings" }
sdk-client = { path = "client" }
sdk-contracts = { path = "contracts" }
sdk-documentation = { path = "documentation" }
sdk-examples = { path = "examples" }
sdk-integration = { path = "integration" }
sdk-testing = { path = "testing" }
sdk-transactions = { path = "transactions" }
sdk-utilities = { path = "utilities" }
sdk-validation = { path = "validation" }

# Workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
