[package]
name = "storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain storage layer and mempool"
keywords = ["blockchain", "storage", "mempool", "cache"]
categories = ["database", "caching"]

[dependencies]
# Sub-subprojects
storage-backup = { path = "backup" }
storage-blocks = { path = "blocks" }
storage-caching = { path = "caching" }
storage-compression = { path = "compression" }
storage-database = { path = "database" }
storage-encryption = { path = "encryption" }
storage-indexing = { path = "indexing" }
storage-mempool = { path = "mempool" }
storage-optimization = { path = "optimization" }
storage-persistence = { path = "persistence" }
storage-recovery = { path = "recovery" }
storage-replication = { path = "replication" }
storage-snapshots = { path = "snapshots" }
storage-state = { path = "state" }
storage-transactions = { path = "transactions" }

# Local dependencies
cc-core = { path = "../core" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Utilities
parking_lot = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }