[package]
name = "consensus-monitoring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Consensus monitoring functionality"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
