[package]
name = "consensus-networking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Consensus networking functionality"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
