[package]
name = "cc-core-algorithms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain core algorithms functionality"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
