[package]
name = "cc-core-blockchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CC Chain core blockchain functionality"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
